@@ -1,0 +1,24 @@
+@media print {
+* { background: transparent !important; color: black !important; text-shadow: none !important; filter:none !important; -ms-filter: none !important; } /* Black prints faster: h5bp.com/s */
+a, a:visited { text-decoration: underline; }
+a[href]:after { content: " (" attr(href) ")"; }
+abbr[title]:after { content: " (" attr(title) ")"; }
+.ir a:after, a[href^="javascript:"]:after, a[href^="#"]:after { content: ""; }/* Don't show links for images, or javascript/internal links */
+pre, blockquote { border: 1px solid #999; page-break-inside: avoid; }
+thead { display: table-header-group; } /* h5bp.com/t */
+tr, img { page-break-inside: avoid; }
+img { max-width: 100% !important; }
+@page { margin: 0.5cm; }
+p, h2, h3 { orphans: 3; widows: 3; }
+h2, h3 { page-break-after: avoid; }
+header#joliebarre nav { display: none; }
+div#conteneur { padding: 0; margin: 0; height: auto; width: auto; }
+section#flux { border: 0px; margin: 0; padding: 0; height: auto; width: auto; box-shadow: none; display: block; }
+body.home section#flux article.post { box-shadow: none; background-image: none; -webkit-box-shadow: none; -moz-box-shadow: none; -o-box-shadow: none;}
+article .post { border: 0; display: block ; vertical-align: top; box-shadow: none;}
+section#flux .entry-meta a[href]:after { content: ""; }
+section#flux .entry-meta > * a { text-decoration: none;  }
+#author-info { text-align: right; background: none; box-shadow: none; border: none; }
+aside#laterale { display: none; }
+footer { display: none; }
+}
